# cf_devmode_toggler

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
